--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
 set(PROJECT_VERSION 1.0.1)
 project(CAMODOCAL LANGUAGES C CXX)
 
+set(CMAKE_CXX_STANDARD 14)
 
 ########################### Misc. Configs ##############################
 # Add custom cmake files folder
